--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body{
     display: flex;
     flex-direction: column;
     height: 100vh;
-    background-image:url('imagenes/background1.jpg');
+    background-image:url('images/background1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
