Update background url style.css

--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,8 @@ body{
 
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    background-image:url('images/background1.jpg');
+    min-height: 100vh;
+    background-image:url('https://github.com/LNPoly/CV-portfolio/images/background1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
