--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,10 @@ body{
 
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    background-image:url('images/background1.jpg');
-    background-repeat: no-repeat;
+    min-height: 100vh;
+    background-image:url('/images/white-background.jpg');
     background-size: cover;
+    background-repeat: no-repeat;
     background-attachment: fixed;
 }
 
