--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-image:url('/images/white-background.jpg');
+    background-image:url('images/white-background.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -145,46 +145,37 @@ header .header-title h1{
 
 /*knowledge*/
 
-.knowledge-list {
+.knowledge{
 
     display: flex;
-    flex-wrap: wrap;
     gap: 1rem;
-    justify-content: center;
-    flex-direction: row;
+    height: 90%;
+    justify-content: space-around;
+    flex-direction:column;
     align-content: center;
     flex-wrap: wrap;
     align-items: center;
-}
-
-.card {
-
-    background-color: #a0e0d736;
-    border-radius: 10px;
-    padding: 1rem;
     text-align: center;
-    width: 150px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+
 }
-
-.card:hover {
-
-    transform: translateY(-5px);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+.content{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
 }
-
-.card i {
-
-    font-size: 2rem;
-    margin-bottom: 0.5rem;
+.content .language, .database, .web, .framework{
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
 }
-
-.card p {
-
-    margin: 0;
-    font-size: 1rem;
-    font-weight: bold;
+.knowledge .content ul{
+    padding: 0;  
+    text-align: center;
+}
+.knowledge .content i{
+    font-size: 1.5rem;
+    margin-top: 1rem;
 }
 
 /*projects*/
