--- a/css/style.css
+++ b/css/style.css
@@ -145,37 +145,46 @@ header .header-title h1{
 
 /*knowledge*/
 
-.knowledge{
+.knowledge-list {
 
     display: flex;
+    flex-wrap: wrap;
     gap: 1rem;
-    height: 90%;
-    justify-content: space-around;
-    flex-direction:column;
+    justify-content: center;
+    flex-direction: row;
     align-content: center;
     flex-wrap: wrap;
     align-items: center;
-    text-align: center;
+}
 
-}
-.content{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    width: 100%;
-}
-.content .language, .database, .web, .framework{
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-}
-.knowledge .content ul{
-    padding: 0;  
+.card {
+
+    background-color: #a0e0d736;
+    border-radius: 10px;
+    padding: 1rem;
     text-align: center;
+    width: 150px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-.knowledge .content i{
-    font-size: 1.5rem;
-    margin-top: 1rem;
+
+.card:hover {
+
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.card i {
+
+    font-size: 2rem;
+    margin-bottom: 0.5rem;
+}
+
+.card p {
+
+    margin: 0;
+    font-size: 1rem;
+    font-weight: bold;
 }
 
 /*projects*/
