--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-image:url('images/white-background.png');
+    background-image:url('/CV-portfolio/images/white-background.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
