--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('/CV-portfolio/images/white-background.png');
+
 
 *{
     margin: 0;
@@ -13,7 +13,7 @@ body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-image:url('images/white-background.png');
+    background-image:url('/CV-portfolio/images/white-background.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
