--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-image:url('https://lnpoly.github.io/CV-portfolio/images/white-background.png');
+    background-image:url('/images/white-background.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -129,6 +129,33 @@ header .header-title h1{
     font-size: medium;
     text-align: start; 
 }
+/*Info*/
+
+.contact{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.contact form{
+    width: 50%;
+}
+
+label, input, textarea {
+    display: block;
+    width: 100%;
+    margin-bottom: 10px;
+}
+button {
+    background-color: #28a745;
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+}
+button:hover {
+    background-color: #218838;
+}
+
 /*education*/
 
 .videoEdu{
