--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,6 @@ header .header-title h1{
     font-family: 'Monserrat';
 }
 
-
 /*CUERPO DE PAGINA*/
 
 .container{
@@ -103,8 +102,6 @@ header .header-title h1{
     height: auto;
 }
 
-
-
 .container .personal-data h2, .education h2, .knowledge h2, .projects h2, .expLab h2{
     font-size: x-large;
     text-decoration: underline;
@@ -125,6 +122,7 @@ header .header-title h1{
     font-size: medium;
     text-align: start; 
 }
+
 /*Info*/
 
 .container .personal-data{
@@ -138,6 +136,7 @@ header .header-title h1{
 .data-list{
     margin: 1%;
 }
+
 .data-list ul{
     display: flex;
     flex-direction: row;
@@ -150,6 +149,7 @@ header .header-title h1{
     flex-direction: column;
     align-items: center;
 }
+
 .contact form{
     display: block;
     width: 90%;
@@ -173,6 +173,7 @@ header .header-title h1{
     display: flex; 
     align-items: center; 
 }
+
 .form-group label {
     width: 110px;
 
@@ -195,6 +196,7 @@ label, input, textarea {
     margin-bottom: 8px;
     border-radius: 0.375rem;
 }
+
 button {
     background-color: #288ea7;
     width: 15%;
@@ -247,17 +249,20 @@ button:hover {
     width: 100%;
     justify-content: space-around;
 }
+
 .knowledge .description{
     letter-spacing: 1.5;
     text-align: justify;
     line-height: 2;
 }
+
 .knowledge .content ul{
     display: flex;
     flex-direction: column;
     text-align: center;
     padding: 0;
 }
+
 .icons{
     border: solid 1px;
     border-radius: 15px;
@@ -271,6 +276,7 @@ button:hover {
     grid-template-columns: repeat(5, 1fr);
     gap: 100px;
 }
+
 .knowledge .content ul i{
     font-size: 1.8rem;
     padding-top: 10%;
@@ -333,8 +339,8 @@ footer .subtitle, footer p{
     position: fixed;
     bottom: 10px;
     right: 10px;
-    width: 3rem;
-    height: 3rem;
+    width: 4rem;
+    height: 4rem;
 } 
 
 .social {
@@ -353,4 +359,89 @@ footer .subtitle, footer p{
     
     color: #333;
     font-size: 1.5em;
+}
+
+/* responsive */
+
+@media (max-width: 768px) {
+
+    .container {
+
+        width: 95%;
+        padding: 10px;
+    }
+
+    header{
+
+        height: 10%;
+    }
+    
+    .navbar ul{
+        margin: 1%;
+        padding: 0;
+    }
+    
+    .navbar ul li{ 
+    
+        flex-grow: 2;
+        line-height: 5vh;  
+        transition: 1s;
+        padding: 0 5px;
+    } 
+
+    .navbar ul li:hover{
+    
+        background-color: #233c4622;
+    }
+      
+    header .header-title h1{
+    
+        margin: 1% auto;
+    }
+
+    .container .personal-data h2, .education h2, .knowledge h2, .projects h2, .expLab h2{
+        font-size: 10px;
+        margin: 1% auto;
+    }
+
+    header .header-title h1{
+
+        margin: 1% auto;
+        font-size:large;
+    }
+
+    .container .presentation{
+
+        line-height: 1.5;
+    }
+
+    .fixed-whatsapp-button{
+
+        width: 2rem;
+        height: 2rem;
+
+    }
+
+    /*footer*/
+
+    footer {
+
+        height: 5%;
+        padding: 0.2%;
+    }
+    
+    footer .subtitle, footer p{
+
+        font-size:x-small;
+        line-height: 1.5;
+    }
+    .social li {
+    
+        margin: 0 5%;
+    }
+    
+    .social a {
+
+        font-size: 1em;
+    }  
 }
